2010-01-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: Commit fix for
	  "Bug 569588 - Pressing 'escape' in the Delete Project dialog
	  removes the project" from Chris Wright <dhasenan@gmail.com>.

2010-01-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Tasks/CommentTasksView.cs: Fix memory leak
	  where the comments task list could hold onto references to
	  projects after they were closed. Also handle loading all
	  comment tasks for the open workspaces if the view is first
	  shown after loading.

2010-01-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.StandardHeader/StandardHeaderService.cs:
	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs:
	  Templates now take care of line ending conventions.

2010-01-11  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui.Content/TextStylePolicy.cs: Added helper
	  method to convert eol markers to a string.

2010-01-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Tasks/CommentTasksView.cs: Clean up the
	  display of comment tags.

2010-01-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs: New path bar
	  widget has reached feature parity wth the old version, so
	  enable it.

2010-01-04  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Ide.addin.xml:
	* MonoDevelop.Ide.CodeTemplates/CodeTemplateCodon.cs:
	* MonoDevelop.Ide.CodeTemplates/CodeTemplateService.cs:
	  implemented 'Bug 562124 - Add ability to create custom built
	  templates for AddIn'.

2010-01-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.FindInFiles/SearchResultWidget.cs: fixed
	  'Bug 561609 - Unhandled exception searching in my project'.

2010-01-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/DragNotebook.cs: Don't shrink the tab
	  border with the windows theme, because it looks ugly. 
