@@ -1,3 +1,9 @@
+2010-01-12  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.Ide.Templates/CodeDomFileDescriptionTemplate.cs:
+	  fixed 'Bug 569548 - [Windows] New files are marked as
+	  autogenerated'.
+
 2010-01-11  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.Ide.Gui/ProjectOperations.cs: Commit fix for
